--- a/MacBulbHomebridgePlugin/package.json
+++ b/MacBulbHomebridgePlugin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "homebridge-plugin-macbulb",
+  "name": "homebridge-macbulb",
   "version": "1.0.0",
   "description": "",
   "keywords": [
